[package]
name = "dsf-client"
description = "DSF client library and CLI"
repository = "https://github.com/dist-svc/dsf-client"
keywords = ["DSF"]
authors = ["ryan <ryan@kurte.nz>"]
license = "MPL-2.0"
edition = "2018"
version = "0.1.0"

[features]
cli = [ "structopt", "simplelog", "humantime" ]
default = [ "cli" ]

[dependencies]
futures = "0.3.1"
async-std = "1.3.0"
colored = "1.9.0"
tracing = "0.1.10"
tracing-futures = "0.2.0"

async-trait = "0.1.21"
serde_json = "1.0.44"


[dependencies.dsf-core]
version = "0.1.0"
features = [ "serde" ]

[dependencies.dsf-rpc]
version = "*"
path = "../dsf-rpc"

[dependencies.log]
features = ["max_level_trace", "release_max_level_info"]
version = "0.4.6"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.futures_codec]
version = "0.4.0"
features = ["json"]

[dependencies.structopt]
version = "0.3.5"
optional = true

[dependencies.simplelog]
version = "0.7.4"
optional = true

[dependencies.humantime]
version = "*"
optional = true

[[bin]]
name = "dsfc"
path = "src/main.rs"
required-features = [ "cli" ]
