[package]
name = "dsf-client"
description = "DSF client library and CLI"
repository = "https://github.com/dist-svc/dsf-client"
keywords = ["DSF"]
authors = ["ryan <ryan@kurte.nz>"]
license = "MPL-2.0"
edition = "2018"
version = "0.1.0"

[features]
cli = [ "structopt", "simplelog", "humantime" ]
default = [ "cli" ]

# Debian package configuration (for cargo-deb)
[package.metadata.deb]
priority = "optional"
depends = "$auto, openssl"
assets = [
    ["target/release/dsfc", "/usr/bin/dsfc", "0755"],
]

[dependencies]
futures = "0.3.1"
async-std = "1.3.0"
colored = "1.9.0"
tracing = "0.1.10"
tracing-futures = "0.2.0"
async-trait = "0.1.21"
serde_json = "1.0.44"

prettytable-rs = "0.8.0"
chrono-humanize = "0.0.11"


[dependencies.dsf-core]
version = "0.1.0"
features = [ "serde" ]

[dependencies.dsf-rpc]
version = "0.1.0"

[dependencies.log]
features = ["max_level_trace", "release_max_level_info"]
version = "0.4.6"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dependencies.futures_codec]
version = "0.4.0"
features = ["json"]

[dependencies.structopt]
version = "0.3.5"
optional = true

[dependencies.simplelog]
version = "0.7.4"
optional = true

[dependencies.humantime]
version = "2.0.0"
optional = true

[dependencies.tui]
version = "0.9.0"
features = [ "crossterm" ]
default-features = false


[[bin]]
name = "dsfc"
path = "src/main.rs"
required-features = [ "cli" ]

