[package]
name = "dsf-client"
description = "DSF client library and CLI"
repository = "https://github.com/dist-svc/dsf-client"
keywords = ["DSF"]
authors = ["ryan <ryan@kurte.nz>"]
license = "MPL-2.0"
edition = "2018"
version = "0.2.0"

[features]
cli = [ "structopt", "simplelog", "humantime" ]
std = [ "thiserror" ]
default = [ "cli", "std" ]

# Debian package configuration (for cargo-deb)
[package.metadata.deb]
priority = "optional"
depends = "libc6,openssl"
assets = [
    ["target/release/dsfc", "/usr/bin/dsfc", "0755"],
]

[dependencies]
futures = "0.3.1"
tokio = { version = "1.26.0", features = [ "full", "net" ] }
tokio-util = { version = "*", features = [ "compat", "codec" ] }
tokio-serde = { version = "0.8.0", features = [ "json" ] }
colored = "1.9.0"
tracing = "0.1.10"
tracing-futures = "0.2.0"
async-trait = "0.1.21"
serde_json = "1.0.44"
prettytable-rs = "0.8.0"
chrono-humanize = "0.0.11"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
structopt = { version = "0.3.5", optional = true }
simplelog = { version = "0.7.4", optional = true }
humantime = { version = "2.0.0", optional = true }
thiserror = { version = "1.0.0", optional = true }
log = { version = "0.4.6", features = ["max_level_trace", "release_max_level_info"] }
tui = { version = "0.9.0", features = [ "crossterm" ], default-features = false }
anyhow = "*"

dsf-core = { version = "0.2.0", features = [ "serde", "std" ] }
dsf-rpc = { version = "0.2.0" }


[[bin]]
name = "dsfc"
path = "src/main.rs"
required-features = [ "cli" ]

[patch.crates-io]
dsf-core = { git = "https://github.com/dist-svc/dsf-core" }
dsf-rpc = { git = "https://github.com/dist-svc/dsf-rpc" }
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide" }
